# swagger_server/models/__init__.py
@@ -3,9 +3,11 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.datoteka_v_besedilo_body import DatotekaVBesediloBody
-from swagger_server.models.datoteka_v_besedilo_ocr_body import DatotekaVBesediloOcrBody
 from swagger_server.models.izlusci_body import IzlusciBody
 from swagger_server.models.oznaci_besedilo_body import OznaciBesediloBody
 from swagger_server.models.terminoloski_kandidat import TerminoloskiKandidat
 from swagger_server.models.job_response import JobResponse
+from swagger_server.models.datoteka_v_besedilo_body import DatotekaVBesediloBody
+from swagger_server.models.datoteka_v_besedilo_ocr_body import DatotekaVBesediloOcrBody
+from swagger_server.models.datoteka_v_conllu_sync_body import DatotekaVConlluSyncBody
+from swagger_server.models.datoteka_v_conllu_sync_ocr_body import DatotekaVConlluSyncOcrBody
