# swagger_server/models/datoteka_v_conllu_sync_ocr_body.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class DatotekaVConlluSyncOcrBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, file: str=None):  # noqa: E501
+        """DatotekaVConlluSyncOcrBody - a model defined in Swagger
+
+        :param file: The file of this DatotekaVConlluSyncOcrBody.  # noqa: E501
+        :type file: str
+        """
+        self.swagger_types = {
+            'file': str
+        }
+
+        self.attribute_map = {
+            'file': 'file'
+        }
+        self._file = file
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DatotekaVConlluSyncOcrBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The datotekaVConlluSync_ocr_body of this DatotekaVConlluSyncOcrBody.  # noqa: E501
+        :rtype: DatotekaVConlluSyncOcrBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def file(self) -> str:
+        """Gets the file of this DatotekaVConlluSyncOcrBody.
+
+
+        :return: The file of this DatotekaVConlluSyncOcrBody.
+        :rtype: str
+        """
+        return self._file
+
+    @file.setter
+    def file(self, file: str):
+        """Sets the file of this DatotekaVConlluSyncOcrBody.
+
+
+        :param file: The file of this DatotekaVConlluSyncOcrBody.
+        :type file: str
+        """
+        if file is None:
+            raise ValueError("Invalid value for `file`, must not be `None`")  # noqa: E501
+
+        self._file = file
